# leptos_test

./: .gitignore  .gitlab-ci.yml  .nvim.lua  Cargo.toml  README.md  Session.vim  bacon.toml  config.lua  deploy.sh  rust-toolchain.toml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: test.yml
docs/: future_improvement_ideas.md  process_monitor.monit
src/: app.rs  chart.rs  lib.rs  main.rs  my_scheduler.rs
src/api/: check_health.rs  mod.rs
src/components/: activate_pin_component.rs  cancel_pump_component.rs  canvas_component.rs  change_cron_string_component.rs  change_seconds_to_pump_water_component.rs  mod.rs  pump_help_component.rs  pump_water_check_component.rs  pump_water_copmpnent.rs  set_and_display_generic_component.rs
src/utils/: config_builder.rs  configure_logger.rs  low_level_handler.rs  mod.rs  pid_file.rs
src/utils/config/: config_builder.rs  config_types.rs  error.rs  mod.rs
style/: input.css  main.scss
